--- a/src/Wrapper.scss
+++ b/src/Wrapper.scss
@@ -9,5 +9,12 @@
 
     grid-template-areas: 
     "header header"
-    "nav content";
+    "sidebar content"
+    "sidebar messages";
   }
+
+.Content {
+    h1 {
+        margin: 0;
+    }
+}
