--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -2,6 +2,16 @@
   width: 100%;
   background-color: lemonchiffon;
   grid-area: header;
+  display: flex;
+  justify-content: space-between;
+
+  .Login {
+    padding: 15px 20px;
+    a {
+      text-decoration: none;
+      color: chocolate;
+    }
+  }
 
   img {
     width: 80px;
