--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,7 +5,7 @@
   display: flex;
   justify-content: space-between;
 
-  .Login {
+  .HeaderLogin {
     padding: 15px 20px;
     a {
       text-decoration: none;
