--- a/src/components/Profile/ProfileInfo/ProfileInfo.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.css
@@ -7,4 +7,18 @@
   width: 300px;
 }
 
+.ProfileStatus {
+  display: inline-block;
+}
+.ProfileStatus p {
+  display: inline-block;
+  padding: 5px 10px;
+  margin: 0;
+  border-radius: 5px;
+  transition: ease-out 0.1s;
+}
+.ProfileStatus p:hover {
+  background-color: white;
+}
+
 /*# sourceMappingURL=ProfileInfo.css.map */
