--- a/src/components/Profile/ProfileInfo/ProfileInfo.scss
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.scss
@@ -8,3 +8,23 @@
     width: 300px;
   }
 }
+
+.ProfileStatus {
+  display: inline-block;
+
+  p {
+    display: inline-block;
+    padding: 5px 10px;
+    margin: 0;
+    border-radius: 5px;
+    transition: ease-out 0.1s;
+
+    &:hover {
+      background-color: white;
+    }
+
+    //&-Input {
+    //  display: inline-block;
+    //}
+  }
+}
