Validation and login/logout added

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -13,6 +13,12 @@
     }
   }
 
+  .HeaderLogout {
+    display: flex;
+    justify-content: space-between;
+    width: 140px;
+  }
+
   img {
     width: 80px;
     height: 65px;
