--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -12,6 +12,11 @@
   text-decoration: none;
   color: chocolate;
 }
+.Header .HeaderLogout {
+  display: flex;
+  justify-content: space-between;
+  width: 140px;
+}
 .Header img {
   width: 80px;
   height: 65px;
