--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -2,7 +2,11 @@
   background-color: lightblue;
 }
 .Login h1 {
-  padding: 30px 20px;
+  padding: 10px 20px;
+}
+
+.LoginForm {
+  padding: 20px;
 }
 
 /*# sourceMappingURL=Login.css.map */
