--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -2,6 +2,10 @@
   background-color: lightblue;
 
   h1 {
-    padding: 30px 20px;
+    padding: 10px 20px;
   }
+}
+
+.LoginForm {
+  padding: 20px;
 }
