--- a/src/components/common/Loader/Loader.css
+++ b/src/components/common/Loader/Loader.css
@@ -3,6 +3,9 @@
   position: relative;
   width: 80px;
   height: 80px;
+  background-color: lightblue;
+  border-radius: 50%;
+  left: calc(50% - 40px);
 }
 .lds-ellipsis div {
   position: absolute;
