--- a/src/components/common/Validator/Validator.css
+++ b/src/components/common/Validator/Validator.css
@@ -19,4 +19,9 @@
   transform: translateY(2px);
 }
 
+.Input {
+  display: inline-block;
+  padding: 5px 0;
+}
+
 /*# sourceMappingURL=Validator.css.map */
