--- a/src/components/Profile/ProfileInfo/ProfileInfo.scss
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.scss
@@ -6,6 +6,7 @@
 .ProfileImage {
   img {
     width: 300px;
+    border-radius: 10px;
   }
 }
 
@@ -18,10 +19,12 @@
     margin: 0;
     border-radius: 5px;
     transition: ease-out 0.1s;
+    color: white;
+    text-shadow: 2px 2px 10px black;
 
-    &:hover {
-      background-color: white;
-    }
+  &:hover {
+    background-color: #88b8c7;
+  }
 
     //&-Input {
     //  display: inline-block;
