--- a/src/components/Users/Users.css
+++ b/src/components/Users/Users.css
@@ -2,9 +2,6 @@
   padding: 25px;
   background-color: lightblue;
 }
-.Users .Pagination-Item {
-  font-weight: bold;
-}
 .Users span {
   cursor: pointer;
 }
@@ -19,6 +16,7 @@
   padding: 10px 10px;
   margin-bottom: 15px;
   background-color: lightcyan;
+  border-radius: 4px;
 }
 .Users .UserItem img {
   width: 70px;
