--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,7 +3,12 @@
   background-color: lemonchiffon;
   grid-area: header;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
+
+  background-image: url("../../img/HeaderLogo.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position-x: 20px;
 
   .HeaderLogin {
     padding: 15px 20px;
