Profile page styled

--- a/src/Wrapper.scss
+++ b/src/Wrapper.scss
@@ -1,19 +1,19 @@
 .Wrapper {
-    width: 1040px;
-    margin: 0 auto;
-    padding: 0 20px;
-    display: grid;
-    grid-template-rows: 60px 1fr;
-    grid-template-columns: 2fr 10fr;
-    grid-gap: 10px;
+    //width: 1040px;
+    //margin: 0 auto;
+    //padding: 0 20px;
 
-    grid-template-areas: 
-    "header header"
-    "sidebar content"
-    "sidebar messages";
-
-
+    //display: grid;
+    //grid-template-rows: 60px 1fr;
+    //grid-template-columns: 2fr 10fr;
+    //grid-gap: 16px;
   }
+
+.PageContainer {
+    display: flex;
+    justify-content: center;
+    padding-top: 18px;
+}
 
 .Content {
     h1 {
