--- a/src/components/Profile/ProfileWall/WallPost/WallPost.scss
+++ b/src/components/Profile/ProfileWall/WallPost/WallPost.scss
@@ -1,8 +1,8 @@
 .WallPost {
-  padding: 10px;
+  padding: 10px 120px 10px 10px;
   display: grid;
   grid-template-columns: 2fr 10fr;
-  border-top: 1px solid lightsteelblue;
+  border-top: 1px solid #b0c4de;
   //grid-template-rows: 3fr;
   //grid-gap: 20px;
 
