--- a/src/components/Users/Users.scss
+++ b/src/components/Users/Users.scss
@@ -19,7 +19,7 @@
   .UserItem {
     padding: 10px 10px;
     margin-bottom: 15px;
-    background-color: lightcyan;
+    background-color: #d4ebfe;
     border-radius: 4px;
 
     img {
