--- a/src/components/common/Loader/Loader.scss
+++ b/src/components/common/Loader/Loader.scss
@@ -3,7 +3,7 @@
   position: relative;
   width: 80px;
   height: 80px;
-  background-color: lightblue;
+  background-color: lightsteelblue;
   border-radius: 50%;
   left: calc(50% - 40px);
 
