--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,15 @@
+.BackgroundColor {
+    background-color: #ffffff;
+}
+
 button {
     border: none;
     background-color: lightsteelblue;
     color: white;
     font-size: 16px;
     font-weight: bold;
-    text-shadow: 2px 2px grey;
-    border-radius: 6px;
-    box-shadow: 3px 3px 8px -5px black;
+    border-radius: 3px;
+    box-shadow: 1px 2px 15px -5px grey;
     outline: none;
     padding: 5px 15px;
     cursor: pointer;
