--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -1,5 +1,7 @@
 .Profile {
   grid-area: messages;
-  background-color: lightblue;
-  margin: 0;
+  //margin: 0;
+  border-radius: 5px;
+  margin-right: 20px;
+  box-shadow: 0 0 8px 1px lightgrey;
 }
