--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -1,13 +1,14 @@
 .Sidebar {
+  height: 100%;
   grid-area: sidebar;
-  background-color: lightpink;
-  padding: 20px;
+  padding: 20px 0 30px;
+  margin-right: 20px;
+  width: 190px;
+  border-radius: 5px;
+  box-shadow: 0 0 8px 1px lightgrey;
 
   a {
-    color: white;
+    color: #6195da;
     text-decoration: none;
-    &.active {
-      color: indianred;
-    }
   }
 }
