--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,18 +1,40 @@
 .Header {
-  grid-area: header;
+  height: 70px;
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   background-color: #b0c4de;
   box-shadow: 0 0 8px 1px lightgrey;
 
 
-  background-image: url("../../icons/logo.svg");
+  //background-image: url("../../icons/logo.svg");
   background-size: contain;
   background-repeat: no-repeat;
   background-position-x: 20px;
 
+  img {
+    width: 90px;
+    height: 70px;
+  }
+
+  .HeaderWrap {
+    display: flex;
+    justify-content: space-between;
+    width: 850px;
+  }
+
+  .HeaderLogo {
+    display: flex;
+    align-items: center;
+    color: white;
+    font-weight: 600;
+    font-size: 24px;
+    transform: translateX(-110px);
+  }
+
   .HeaderLogin {
-    padding: 20px;
+    padding: 0 30px;
+    display: flex;
+    align-items: center;
     a {
       text-decoration: none;
       color: white;
@@ -28,12 +50,14 @@
       background-color: white;
       color: #94b5e1;
       text-shadow: none;
+      transition: ease-in-out 0.25s;
+
+      &:hover {
+        color: #ffffff;
+        background-color: #80a0c9;
+      }
     }
   }
 
-  img {
-    width: 80px;
-    height: 65px;
-    margin-left: 10px;
-  }
+
 }
