--- a/src/components/Sidebar/SideItem/SideItem.scss
+++ b/src/components/Sidebar/SideItem/SideItem.scss
@@ -1,10 +1,17 @@
 .SideItem {
-  padding: 10px 5px;
+  padding: 10px;
+  transition: ease 0.2s;
+
   a {
     padding-left: 34px;
     display: inline-block;
     width: 80%;
   }
+
+  &:hover {
+    background-color: #eee;
+  }
+
 }
 
 .ProfileIcon {
