--- a/src/components/Profile/ProfileInfo/ProfileInfo.scss
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.scss
@@ -42,6 +42,7 @@
       transition: ease-in-out 0.2s;
       background: 95% #b0c4de url("../../../icons/image-regular.svg") no-repeat;
       background-size: 25px;
+
       &:hover {
         background-color: #80a0c9;
       }
@@ -51,29 +52,27 @@
 
 .ProfileStatus {
   display: inline-block;
+  cursor: pointer;
+  padding-top: 20px;
 
   input {
-    margin: 12px 0;
-    padding: 5px;
-    border: none;
+    margin: 0;
+    padding: 7px 10px;
+    border-radius: 5px;
     font-size: 20px;
+    font-family: 'Segoe UI', serif;
+    width: 230px;
   }
 
-  &-Input {
-    padding: 10px 0;
-  }
 
   p {
     display: inline-block;
-    padding: 5px 10px;
+    padding: 7px 10px;
     margin: 0;
     border-radius: 5px;
     transition: ease-in-out 0.2s;
-
-
-    &:hover {
-      //background-color: #80a0c9;
-      text-shadow: 2px 2px 10px black;
-    }
+    border: 1px lightsteelblue dashed;
+    cursor: pointer;
+    width: 230px;
   }
 }
