--- a/src/components/common/Validator/Validator.scss
+++ b/src/components/common/Validator/Validator.scss
@@ -21,8 +21,15 @@
   &_input {
     display: flex;
     flex-direction: column;
-    max-width: 200px;
+    max-width: 240px;
     padding: 5px 10px 10px 0;
+
+    input {
+      padding: 10px;
+      border-radius: 4px;
+      border: 1px lightsteelblue solid;
+      font-size: 20px;
+    }
 
     span {
       padding-top: 10px;
