--- a/src/components/Messages/MessagesBody/MessagesBody.scss
+++ b/src/components/Messages/MessagesBody/MessagesBody.scss
@@ -2,9 +2,9 @@
   padding: 20px 25px;
 
   &-Item {
-    width: 400px;
-    padding: 20px;
-    border: 1px #eee solid;
+    //width: 400px;
+    padding: 20px 10px;
+    border: 2px #eee solid;
     border-radius: 5px;
     margin-bottom: 15px;
   }
