--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -1,6 +1,5 @@
 .Sidebar {
-  height: 100%;
-  grid-area: sidebar;
+  max-height: 240px;
   padding: 20px 0 30px;
   margin-right: 20px;
   width: 220px;
