--- a/src/App.css
+++ b/src/App.css
@@ -6,14 +6,15 @@ button {
     border: none;
     background-color: lightsteelblue;
     color: white;
-    font-size: 16px;
-    font-weight: bold;
+    font-size: 20px;
+    /*font-weight: bold;*/
     border-radius: 3px;
-    box-shadow: 1px 2px 15px -5px grey;
+    box-shadow: 0 4px 7px 0 lightgrey;
     outline: none;
     padding: 5px 15px;
     cursor: pointer;
     transition: ease-in-out 0.2s;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
 }
 
 button:hover {
