--- a/src/Wrapper.scss
+++ b/src/Wrapper.scss
@@ -1,22 +1,21 @@
 .Wrapper {
-    //width: 1040px;
-    //margin: 0 auto;
-    //padding: 0 20px;
-
-    //display: grid;
-    //grid-template-rows: 60px 1fr;
-    //grid-template-columns: 2fr 10fr;
-    //grid-gap: 16px;
   }
 
 .PageContainer {
-    display: flex;
+    position: relative;
+    display: grid;
+    grid-template-columns: 1fr 4fr;
     justify-content: center;
-    padding-top: 18px;
-    padding-right: 100px;
+    padding: 20px;
+    max-width: 1080px;
+    margin: 0 auto;
+    //padding-right: 100px;
 }
 
 .Content {
+    display: flex;
+    flex-direction: column;
+
     h1 {
         margin: 0;
     }
