--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -5,14 +5,15 @@
   padding: 25px 40px;
 
   &-TestAccount {
-    max-width: 240px;
     text-align: center;
   }
 }
 
 
 .LoginForm {
-  //padding: 10px 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .RememberMeForm {
