--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -1,7 +1,5 @@
 .Profile {
-  grid-area: messages;
-  //margin: 0;
+  padding: 0 20px;
   border-radius: 5px;
-  margin-right: 20px;
   box-shadow: 0 0 8px 1px lightgrey;
 }
