--- a/src/components/Users/Users.scss
+++ b/src/components/Users/Users.scss
@@ -31,11 +31,12 @@
       display: flex;
       flex-direction: column;
       padding: 10px;
+      color: #6195da;
+      text-decoration: none;
     }
 
     img {
-      width: 70px;
-      height: 70px;
+      max-width: 90px;
       border-radius: 50%;
     }
   }
